# python-hcl2-eval

./: pyproject.toml  readme.md
.changelog/: 0.1.1.toml  0.1.2.toml  0.1.3.toml  _unreleased.toml
.github/workflows/: python-package.yml
examples/: hello.py
src/hcl2_eval/: __init__.py  api.py  env.py  error.py  eval.py  exec.py  matrix.py  stanza.py  types.py
tests/: test_api.py  test_import.py
