[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hcl2-eval"
version = "0.1.1"
description = ""
authors = ["Niklas Rosenstein <rosensteinniklas@gmail.com>"]
license = "MIT"
readme = "readme.md"
packages = [{ include = "hcl2_eval", from = "src" }]
classifiers = []
keywords = []

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/NiklasRosenstein/python-hcl2-eval/issues"
# Documentation = ""
# Homepage = ""
Repository = "https://github.com/NiklasRosenstein/python-hcl2-eval"

[tool.poetry.dependencies]
python = "^3.6"
hcl2-ast = "^0.3.0"
typing-extensions = ">=3.10.0"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pytest = "*"

[tool.slap]
typed = true

[tool.slap.test]
check = "slap check"
mypy = "dmypy run src/"
pytest = "pytest tests/ -vv"
black = "black --check src/ tests/ examples/"
isort = "isort --check-only src/ tests/ examples/"
flake8 = "flake8 src/ tests/ examples/"
examples-hello = "python examples/hello.py"

[tool.slap.run]
fmt = "black src/ tests/ examples/ && isort src/ tests/ examples/"

[tool.mypy]
python_version = "3.6"
explicit_package_bases = true
mypy_path = ["src"]
namespace_packages = true
pretty = true
show_error_codes = true
show_error_context = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true

[tool.black]
line-length = 120
